Header/Styling Fix
Minor changes that were broken in the upgrade.
Header.php
*  Header is now an image
*  No longer shows blog description
Style.css
*  .sidebar-sponsor images now properly show in a block
*  Site title now has a background
*  Navigation properly centered in wide display
*  Remove wasted space at top

--- a/wp-content/themes/twentytwelve/style.css
+++ b/wp-content/themes/twentytwelve/style.css
@@ -1455,7 +1455,9 @@ img#wpstats {
 		font-size: 26px;
 		font-size: 1.857142857rem;
 		line-height: 1.846153846;
-		margin-bottom: 0;
+		background: url(inc/anaheim-center.jpg);
+		background-position: center;
+		margin-bottom: 0;	
 	}
 	.main-navigation ul.nav-menu,
 	.main-navigation div.nav-menu > ul {
@@ -1463,7 +1465,6 @@ img#wpstats {
 		border-top: 1px solid #ededed;
 		display: inline-block !important;
 		text-align: left;
-		width: 100%;
 	}
 	.main-navigation ul {
 		margin: 0;
@@ -1591,11 +1592,12 @@ img#wpstats {
 	body .site {
 		padding: 0 40px;
 		padding: 0 2.857142857rem;
-		margin-top: 48px;
-		margin-top: 3.428571429rem;
 		margin-bottom: 48px;
 		margin-bottom: 3.428571429rem;
 		box-shadow: 0 2px 6px rgba(100, 100, 100, 0.3);
+		margin-top: 0px;
+		margin-top: 0rem;
+
 	}
 	body.custom-background-empty {
 		background-color: #fff;
@@ -1724,4 +1726,14 @@ img#wpstats {
 		margin-left: 50px;
 		margin-left: 3.57142857rem;
 	}
+}
+
+/* Jon's modifications
+----------------------------------------------- */
+.sidebar-sponsor
+{
+	display:block; 
+	margin: 0 auto; 
+	margin-top: 5px;
+	box-shadow: none !important;
 }
